test/libsolidity/syntaxTests/constants/constant_with_visibility.sol
uint public x = 7;
// ----
// DeclarationError 8342: (0-17): Only constant variables are allowed at file level.
